clusters/main/apps/dash-istio-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: dash-ingress
  namespace: dash
spec:
  selector:
    istio: system-istio-ingress
  servers:
  - hosts:
    - dash.${PUBLIC_DOMAIN}
    port:
      number: 80
      name: http
      protocol: HTTP
    tls:
      httpsRedirect: true
  - hosts:
    - dash.${PUBLIC_DOMAIN}
    port:
      name: https-dash
      number: 443
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: grafana-tls
