clusters/main/apps/nextcloud-istio-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: nextcloud-ingress
  namespace: nextcloud
spec:
  selector:
    istio: system-istio-ingress
  servers:
  - hosts:
    - files.${PUBLIC_DOMAIN}
    port:
      number: 80
      name: http
      protocol: HTTP
    tls:
      httpsRedirect: true
  - hosts:
    - files.${PUBLIC_DOMAIN}
    port:
      name: https-nextcloud
      number: 443
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: nextcloud-tls
